[package]
name = "sse_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = { version = "0.4.5" }
ndarray = { version = "0.16.1" }
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.201", features = ["derive"], optional = true }
ndarray-linalg = "0.17.0"
rustfft = "6.2.0"

[features]
default = []
serde = ["dep:serde", "num-complex/serde", "ndarray/serde"]
localized = []
