[package]
name = "sse_solver_py"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
num-complex = { version = "0.4.6", features = ["serde"] }
pyo3 = { version = "0.21.2", features = ["num-complex"] }
serde = "1.0.201"
serde_json = "1.0.117"
sse_solver = { version = "0.1.0", path = "../sse_solver" }


[lib]
name = "_solver"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
