[package]
name = "sse_solver_py"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6" }
num-complex = { version = "0.4.6" }
pyo3 = { version = "0.21.2", features = ["num-complex"] }
sse_solver = { version = "0.1.0", path = "../sse_solver" }

[lib]
name = "_solver"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
