[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sse_solver_py"
description = ""
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Matthew Ord", email = "matthew.ord1@gmail.com" }]
readme = "README.md"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff~=0.3.0", "pytest~=8.0.1"]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "D104", "D100", "D417", "TD003", "TD002"]
unfixable = ["ERA001", "T201"]

[tool.ruff.lint.extend-per-file-ignores]
"examples/**/*" = ["T201", "INP001"]
"tests/**/*" = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sse_solver_py._solver"
rustc-args = ["-Ctarget-cpu=native"]

[tool.poetry]
name = "sse_solver_py"
package-mode = false
