[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sse_solver_py"
description = ""
requires-python = ">=3.14,<3.15"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{ name = "Matthew Ord", email = "matthew.ord1@gmail.com" }]
readme = "README.md"
dynamic = ["version"]


[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "COM812",
    "E501",
    "S101",
    "PT009",
    "D100",
    "D105",
    "CPY001",
    "TD003",
    "TD002",
    "DOC201",
    "DOC402",
    "PD",
]
fixable = ["ALL"]
unfixable = ["T201"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["PLR6301", "INP001", "PLR0914", "D101", "D102", "D103", "D104"]
"scripts/**/*" = [
    "PLR6301",
    "INP001",
    "PLR0914",
    "D101",
    "D102",
    "D103",
    "D104",
]
"examples/**/*" = ["INP001", "T201"]
"docs/**/*" = ["INP001", "I002"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sse_solver_py._solver"
rustc-args = ["-Ctarget-cpu=native"]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "qutip>=5.2.3",
    "ruff",
    "pytest~=9.0.0",
    "ty>=0.0.31",
]
